@@ -21,6 +21,7 @@
 	update: 'enabled' user acount flag was dropped
 	update: switchvlans gateway has been changed
 	update: RackTables installation is now done only through install.php
+	update: records for F5 hardware
 	bugfix: show error message if snmp module isn't loaded.  closes ticket 43 (by Aaron)
 	bugfix: show error message for duplicate IPv4 network record
 	bugfix: it was possible to access the system as any existing
